--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -36,7 +36,13 @@ ul{
 }
 
 li{
-    padding-right: 10px;
+    padding-right: 15px;
+    font-size: 10pt;
+    color: black;
+    font-weight: 800;
+    font-style: italic;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+
 }
 .navegacao{
 
@@ -66,5 +72,42 @@ li{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: black;
     
+
+}
+
+.bloco1{
+    background-color: lightskyblue;
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 16px;
+    border: 5px solid black;
+
+}
+
+.bloco2{
+    background-color: lightcyan;
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 16px;
+    border: 5px solid black;
+
+}
+
+.bloco3{
+    background-color: lightgray;
+    height: 150px;
+    width: 150px;
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 16px;
+    border: 5px solid black;
+
 
 }
