--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -68,12 +68,29 @@ li{
 
 .valor-propriedade{
     font-size: 20pt;
-    font-weight: 400;
+    font-weight: 800;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: black;
+    text-align: center;
     
 
 }
+
+.container-row{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    
+    /* Indiferente para o flex box */
+    background-color: red;
+    border-radius: 20px;
+    border: 5px solid black;
+
+}
+
+
 
 .bloco1{
     background-color: lightskyblue;
@@ -84,6 +101,10 @@ li{
     font-family: 'Courier New', Courier, monospace;
     border-radius: 16px;
     border: 5px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 
 }
 
@@ -96,6 +117,10 @@ li{
     font-family: 'Courier New', Courier, monospace;
     border-radius: 16px;
     border: 5px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 
 }
 
@@ -108,6 +133,9 @@ li{
     font-family: 'Courier New', Courier, monospace;
     border-radius: 16px;
     border: 5px solid black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
 
 }
