--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -4,9 +4,7 @@ body {
     
 }
 
-hr{
-    color: red;
-}
+
 .cabecalho {
     border: 5px solid red;
     border-radius: 20px;
@@ -44,9 +42,7 @@ li{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 
 }
-.navegacao{
 
-}
 
 .nome-propriedade{
     font-size: 2em;
@@ -75,7 +71,7 @@ li{
     
 
 }
-
+/* Configuração com linhas display flex e reverso */
 .container-row{
     display: flex;
     flex-direction: row;
@@ -91,9 +87,12 @@ li{
 
 }
 
-.container-column{
+
+
+
+.container-rowreverse{
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     justify-content: center;
     align-items: center;
     /* gap: 50px; */
@@ -107,11 +106,10 @@ li{
 
 }
 
-
-
-.container-rowreverse{
+/* Configuração com colunas display flex e reverso */
+.container-column{
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     /* gap: 50px; */
@@ -143,7 +141,7 @@ li{
 
 
 
-
+/* Configuração dos blocos */
 
 .bloco1{
     background-color: lightskyblue;
@@ -160,6 +158,7 @@ li{
     
 
 }
+
 
 .bloco2{
     background-color: lightcyan;
