--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -75,8 +75,7 @@ li{
 .container-row{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
+    
     /* gap: 50px; */
     
     /* Indiferente para o flex box */
@@ -93,8 +92,7 @@ li{
 .container-rowreverse{
     display: flex;
     flex-direction: row-reverse;
-    justify-content: center;
-    align-items: center;
+   
     /* gap: 50px; */
     
     /* Indiferente para o flex box */
@@ -110,8 +108,7 @@ li{
 .container-column{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+   
     /* gap: 50px; */
     
     /* Indiferente para o flex box */
@@ -126,8 +123,7 @@ li{
 .container-columnreverse{
     display: flex;
     flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
+    
     /* gap: 50px; */
     
     /* Indiferente para o flex box */
@@ -152,9 +148,7 @@ li{
     font-family: 'Courier New', Courier, monospace;
     border-radius: 16px;
     border: 5px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   
     
 
 }
@@ -169,9 +163,7 @@ li{
     font-family: 'Courier New', Courier, monospace;
     border-radius: 16px;
     border: 5px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+   
     
 
 }
@@ -185,9 +177,19 @@ li{
     font-family: 'Courier New', Courier, monospace;
     border-radius: 16px;
     border: 5px solid black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  
+}
 
+
+/* Utilizando o Justify-Content */
+
+.container-justify-center{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: red;
+    border-radius: 20px;
+    border: 5px solid black;
+    height: 500px;
 
 }
