--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -193,3 +193,57 @@ li{
     height: 500px;
 
 }
+
+.container-justify-start{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    background-color: red;
+    border-radius: 20px;
+    border: 5px solid black;
+    height: 500px; 
+}
+
+.container-justify-end{
+   
+    background-color: red;
+    border-radius: 20px;
+    border: 5px solid black;
+    height: 500px;
+}
+
+.flexend{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+}
+
+.container-justify-between{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: red;
+    border-radius: 20px;
+    border: 5px solid black;
+    height: 500px;
+}
+
+.container-justify-space-around{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    background-color: red;
+    border-radius: 20px;
+    border: 5px solid black;
+    height: 500px;
+}
+
+.container-justify-space-evenly{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: red;
+    border-radius: 20px;
+    border: 5px solid black;
+    height: 500px;
+}
