--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -9,12 +9,19 @@ body {
     border: 5px solid red;
     border-radius: 20px;
     height: 50px;
+    
+    
 
 }
 
 .logo {
     padding-left: 10px;
     padding-top: 5px;
+}
+
+.navegacao{
+ 
+
 }
 
 ul {
@@ -24,24 +31,45 @@ ul {
     flex-direction: row;
     justify-content: end;
     align-items: center;
-    gap: 100px;
+    gap: 80px;
+    background-color: white 0.0;
+    width: 80vw;
+    position: fixed;
+    
 
-    background-color: red;
+    
 
     border-radius: 10px;
+    height: 35px;
+
+  
+    
 
 
 }
 
 li {
     padding-right: 15px;
-    font-size: 10pt;
+    font-size: 14pt;
     color: black;
     font-weight: 800;
     font-style: italic;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
 }
 
+a{
+    text-transform: uppercase;
+    text-decoration: none;
+    border: 2px solid lightskyblue;
+    border-radius: 10px;
+    background-color: lightskyblue;
+    color: black;
+}
+
+a:hover{
+    color: white;
+}
 
 .nome-propriedade {
     font-size: 2em;
