--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -19,10 +19,7 @@ body {
     padding-top: 5px;
 }
 
-.navegacao{
- 
 
-}
 
 ul {
     list-style: none;
@@ -65,6 +62,7 @@ a{
     border-radius: 10px;
     background-color: lightskyblue;
     color: black;
+    
 }
 
 a:hover{
@@ -488,7 +486,7 @@ a:hover{
     font-size: 2em;
     font-weight: 500;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: burlywood;
+    color: black;
 
 
 
@@ -516,7 +514,7 @@ a:hover{
     font-size: 2em;
     font-weight: 500;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: burlywood;
+    color: black;
 
 
 
